--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
@@ -22,6 +23,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.22.3",
